[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-acme"
version = "1.1.0"
requires-python = ">=3.9"
dependencies = ["requests", "cryptography"]
authors = [
    { name = "ruema" },
]
description = "automatically generate https certificates via acme"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: System Administrators',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]

[project.urls]
Homepage = "https://github.com/ruema/auto-acme"
Documentation = "https://github.com/ruema/auto-acme"
Repository = "https://github.com/ruema/auto-acme.git"
"Bug Tracker" = "https://github.com/ruema/auto-acme/issues"
